--- a/site.yml
+++ b/site.yml
@@ -5,12 +5,14 @@
   pre_tasks:
 
   - name: install updates (CentOS)
+    tags: always
     dnf:
       update_only: yes
       update_cache: yes
     when: ansible_distribution == "CentOS"
 
   - name: install updates (Ubuntu)
+    tags: always
     apt:
       upgrade: dist
       update_cache: yes
@@ -22,6 +24,7 @@
   tasks:
 
   - name: install apache and php for Ubuntu servers
+    tags: apache,apache2,ubuntu
     apt:
       name:
         - apache2
@@ -30,6 +33,7 @@
     when: ansible_distribution == "Ubuntu"
 
   - name: install apache and php for CentOS servers
+    tags: apache,centos,httpd
     dnf:
       name:
         - httpd
@@ -43,12 +47,14 @@
   tasks:
 
     - name: install mariadb pacakge (CentOS)
+      tags: centos,mariadb
       dnf:
         name: mariadb
         state: latest
       when: ansible_distribution == "CentOS"
 
     - name: install mariadb pacakge (Ubuntu)
+      tags: db,mariadb,ubuntu
       apt:
         name: mariadb-server
         state: latest
@@ -60,6 +66,7 @@
   tasks:
 
     - name: install samba package
+      tags: samba
       package:
         name: samba
         state: latest
