--- a/site.yml
+++ b/site.yml
@@ -19,6 +19,23 @@
     when: ansible_distribution == "Ubuntu"
 
 
+- hosts: workstations
+  become: true
+  tasks:
+    - name: install unzip
+      package:
+        name: unzip
+
+    - name: install terraform
+      unarchive:
+        src: https://releases.hashicorp.com/terraform/1.0.1/terraform_1.0.1_linux_amd64.zip
+        dest: /usr/local/bin
+        remote_src: yes
+        mode: 0755
+        owner: root
+        group: root
+
+
 - hosts: web_servers
   become: true
   tasks:
@@ -55,14 +72,14 @@
   become: true
   tasks:
 
-    - name: install mariadb pacakge (CentOS)
+    - name: install mariadb package (CentOS)
       tags: centos,mariadb
       dnf:
         name: mariadb
         state: latest
       when: ansible_distribution == "CentOS"
 
-    - name: install mariadb pacakge (Ubuntu)
+    - name: install mariadb package (Ubuntu)
       tags: db,mariadb,ubuntu
       apt:
         name: mariadb-server
